syntax = "proto3";

package order;

option go_package = "build/order";

import "protos/global/global.proto";

message FreightTemplatesUndelivered {
  // 不送达id
  string undeliveredId = 1;  // @gotags: `gorm:"primary_key;<-:create"`
  // 模板id
  string tempId = 2;  // @gotags: `gorm:"<-" validate:"required"`
  // 地区编码(包含省和市
  string areaCode = 3;  // @gotags: `gorm:"<-" validate:"required"`
  // 删除状态
  bool delStatus = 4;  // @gotags: `gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"`
  // 创建人
  string createBy = 5;  // @gotags: `gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"`
  // 修改人
  string updateBy = 6;  // @gotags: `gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"`
  // 创建时间
  string createTime = 7;  // @gotags: `gorm:"->" swaggerignore:"true"`
  // 修改时间
  string updateTime = 8;  // @gotags: `gorm:"->" swaggerignore:"true"`
}

message FreightTemplatesUndeliveredIds {
  repeated string undeliveredId = 1;
  string userId = 2;
}

message FreightTemplatesUndeliveredPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;  //  @gotags: `validate:"required,min=1" example:"1"`
  // 分页长度
  int64 pageSize = 2;  //  @gotags: `validate:"required,min=10,max=100" example:"10"`
  // 查询调教
  message QueryParams {
    string areaCode = 1;
  }
  // 查询参数
  QueryParams params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

message FreightTemplatesUndeliveredResponse {
  int64 count = 1;  // 数据量
  string Msg = 2;  // 错误信息
  FreightTemplatesUndelivered detail = 3;  // 详情
  repeated FreightTemplatesUndelivered list = 4;  // 列表
}

service FreightTemplatesUndeliveredService {
  // Create 不送达地区新增信息
  rpc Create(FreightTemplatesUndelivered) returns (FreightTemplatesUndeliveredResponse);

  // Update 更新不送达地区信息
  rpc Update(FreightTemplatesUndelivered) returns (FreightTemplatesUndeliveredResponse);

  // Delete 删除不送达地区信息
  rpc Delete(FreightTemplatesUndeliveredIds) returns (FreightTemplatesUndeliveredResponse);

  // FindPageList 查询不送达地区列表
  rpc FindPageList(FreightTemplatesUndeliveredPageAuthQuery) returns (FreightTemplatesUndeliveredResponse);

  // FindById 查询不送达地区详情
  rpc FindById(FreightTemplatesUndeliveredIds) returns (FreightTemplatesUndeliveredResponse);
}